// Vitest Snapshot v1

exports[`Quantum utils > determines OU after other pieces (new piece was captured) 1`] = `
{
  "fulls": [
    "Fu",
    "Gi",
    "Hi",
    "Ka",
    "Ke",
    "Ki",
    "Ky",
    "Ou",
  ],
  "kinds": [
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Hi",
      "Ki",
      "Ou",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Hi",
      "Ki",
      "Ou",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
  ],
}
`;

exports[`Quantum utils > determines to 2 KEs and exhausts it 1`] = `
{
  "fulls": [
    "Ke",
  ],
  "kinds": [
    [
      "Ke",
    ],
    [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils > determines to 2 KEs and exhausts it 2`] = `
{
  "fulls": [
    "Ke",
  ],
  "kinds": [
    [
      "Ke",
    ],
    [
      "Ke",
    ],
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ki",
      "Ky",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils > determines to HI after doing HI move and exhausts it 1`] = `
{
  "fulls": [
    "Hi",
  ],
  "kinds": [
    [
      "Hi",
    ],
  ],
}
`;

exports[`Quantum utils > determines to KE after doing KE jump 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils > determines to KI,HI,OU after going bKekward 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Hi",
      "Ki",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils > doesn't determine without move 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
      "Ou",
    ],
  ],
}
`;
